--- a/Clients/Dockerfile
+++ b/Clients/Dockerfile
@@ -3,4 +3,4 @@ RUN mkdir /app
 ADD . /app
 WORKDIR /app
 RUN pip install -r requirements.txt
-CMD ["python","-u", "performance.py"]
+CMD ["python","-u", "perf3.py"]
